[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "topo_libasd"
authors = [{ name = "Sylvia Whittle", email = "sylviwhittle@gmail.com" }]
description = "A fork of the original library to read High Speed AFM data file"
license = { text = "LGPL=3.0" }
dependencies = ["cmake", "wheel"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
write_to = "python/_version.py"
